# Gal4Xy

./: CMakeLists.txt  README.md  ai.c  ai.h  battle.c  battle.h  error.h  fleet.c  fleet.h  galaxy.c  galaxy.h  io.c  io.h  main.c  notifications.c  notifications.h  planet.c  planet.h  player.c  player.h  sector.c  sector.h  utils.c  utils.h
lib/: vector.c
src/: battle.c  battle.h  color.h  error.h  galaxy.c  galaxy.h  io.c  io.h  main.c  notifications.c  notifications.h  planet.h  player.c  player.h  sector.c  sector.h  utils.c  utils.h
tests/: CMakeLists.txt  test_galaxy.c
